--- a/src/config.toml
+++ b/src/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://cesium.github.io/fractal-tree"
 title = "Fractal Tree • CeSIUM"
 
 # Directories
-publishDir = "public"
+publishDir = "../docs"
 
 # Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
 pygmentsCodefences = true
