--- a/src/config.toml
+++ b/src/config.toml
@@ -6,7 +6,7 @@ publishDir = "../docs"
 
 # Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
 pygmentsCodefences = true
-pygmentsStyle = "emacs"
+pygmentsStyle = "vs"
 
 [params.info]
 description = "Introductory programming sessions @ University of Minho"
